src/App.css
@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;700;800&family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap");

body {
  margin: 0;
  font-size: 18px;
  font-family: "Poppins", sans-serif;
}

::selection {
  background: #ff9f2996;
}

